fixing spacing issue in designer. moving designer notification to the bottom of the form, just above the save+cancel buttons
--HG--
branch : newuserinterface

--- a/app/themes/default/css/designer.less
+++ b/app/themes/default/css/designer.less
@@ -1,5 +1,5 @@
 .designer-toolbar{
-    margin:0 0 50px 0;
+    margin:0 0 0 0;
     input[type="submit"]{
         .zButton();
         margin-bottom:15px;
@@ -7,6 +7,9 @@
     h3{
         margin:0 0 5px 0;
         padding-left:0;
+    }
+    > div {
+    	margin-bottom:25px;
     }
 }
 #NotificationBar{
@@ -273,8 +276,10 @@
 
 //#sortable-editable-dropdown-collection,
 #layout-container{
-    margin-top:30px;
-
+    margin:30px 0 15px 0;
+	float:left;
+	width:100%;
+	
     .ui-draggable-disabled.ui-state-disabled{
         opacity:0.2 !important;
         background: !important;
